# test_paths

./: README.md  pyproject.toml
test_paths/app/: main.py
test_paths/config/: local_settings.yaml
